--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -25,11 +25,14 @@
 }
 
 .login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   max-width: 400px;
   margin: 100px auto;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .login-container h2 {
@@ -51,17 +54,25 @@
 
 .login-container button {
   padding: 10px;
-  background: #007bff;
+  background: #004aa3;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin: 0.7rem 0;
+  align-items: center;
 }
 
 .login-container .error {
   color: red;
   margin-bottom: 10px;
   text-align: center;
+}
+/* add media queries for mobile responsive */
+@media (max-width: 600px) {
+  .login-container {
+    max-width: 70%;
+  }
 }
 
 .category-item,
@@ -101,7 +112,7 @@
   padding: 1rem 2rem;
   background-color: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(10px);
-  box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
   margin-bottom: 2rem;
   position: sticky;
   top: 0;
@@ -180,7 +191,7 @@
   padding: 0;
   background-color: white;
   border-radius: 8px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   margin-bottom: 0.5rem;
   overflow: hidden;
 }
@@ -264,7 +275,7 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .fab-button:hover {
@@ -284,7 +295,7 @@ textarea {
 .payment-method-item {
   background-color: white;
   border-radius: 8px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 .category-name,
